change home page link images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
         
         <div class="row">
           <div id="logo" class="one-of-two">
-              <a href="/" title="Home"><img src="/images/logo.png" alt="ConViz"></a>
+              <a href="/" title="Home"><img src="/images/logo.png" alt="ConViz" height="90" width="480"></a>
           </div> <!-- #logo .one-of-two -->
           
           <div id="rotator">
