--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -3,8 +3,29 @@
 <% end %>
 
 <div id="about-page-container">
-  <div id="overview-container" class="widget">
+  <div class="widget about-container">
     <h3 class="widget-section-title widget-title-text-icon">Overview</h3>
     <%= render :partial => 'overview_text' %> 
   </div>
+
+  <div class="widget about-container">
+    <h3 class="widget-section-title widget-title-text-icon">Background</h3>
+    TODO
+  </div>
+
+  <div class="widget about-container">
+    <h3 class="widget-section-title widget-title-text-icon">Data Quality</h3>
+    TODO
+  </div>
+
+  <div class="widget about-container">
+    <h3 class="widget-section-title widget-title-text-icon">With A Little Help From My Friends</h3>
+    TODO
+  </div>
+
+  <div class="widget about-container">
+    <h3 class="widget-section-title widget-title-text-icon">Contact Us</h3>
+    If you have any comments or questions regarding this site feel free to contact me at <a href="cavenaghweb@hotmail.com">cavenaghweb@hotmail.com</a>
+  </div>
+
 </div>
