complete about page

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -10,17 +10,43 @@
 
   <div class="widget about-container">
     <h3 class="widget-section-title widget-title-text-icon">Background</h3>
-    TODO
+    This project was born during the <strong>Hack at the Mitchell</strong> and was developed as an entry for <a href="http://libraryhack.org/">{Library:/hack/}</a>.
+    It was hacked together in the spare time I had in May 2011.
   </div>
 
   <div class="widget about-container">
     <h3 class="widget-section-title widget-title-text-icon">Data Quality</h3>
-    TODO
+    The <a href="http://data.gov.au/dataset/british-convict-transportation-registers/">British Convict Transportation Registry</a> contains ~123,000 of the estimated 160,000 convicts transported to Australia.  The registry states:
+    <i>The original records on which this database is based are not an exhaustive list of all convicts sent to Australia.</i> Therefore visualisations that appear on this site should be considered approximations.  This is
+    <strong>not a research project</strong> and visualisations have not been constructed using scientific techniques.  The data within the registry is not particularly clean so cleansing had to be performed to generate 
+    the visualisations found on this site. Data cleansing was performed using <a href="https://github.com/o-sam-o/conviz/blob/master/lib/tasks/import_convicts.rake">automated scripts</a> and therefore is clearly documented for anyone interested.
   </div>
 
   <div class="widget about-container">
     <h3 class="widget-section-title widget-title-text-icon">With A Little Help From My Friends</h3>
-    TODO
+    <strong>Tech:</strong>
+    <ul>
+      <li><a href="http://www.ruby-lang.org/en/">Ruby</a> and <a href="http://rubyonrails.org/">Rails</a></li>
+      <li><a href="http://developer.yahoo.com/yui/2/">YUI 2</a></li>
+    </ul>
+    <br/>
+    <strong>Visualisations</strong>
+    <ul>
+      <li><a href="http://www.highcharts.com/">Highcharts</a></li>
+      <li><a href="http://vis.stanford.edu/protovis/">Protovis</a></li>
+      <li><a href="http://code.google.com/apis/chart/">Google Visualisation API</a></li>
+      <li><a href="http://code.google.com/apis/maps/documentation/javascript/">Google Maps</a></li>
+    </ul>
+    <br/>
+    <strong>Design</strong>
+    <ul>
+      <li>The site design is almost completely copied from the <a href="http://www.press75.com/themes/transmit/">Transmit</a> wordpress theme produced by <a href="http://www.press75.com/">Press75.com</a></li>
+      <li><a href="http://babasse.deviantart.com/art/Old-School-79460710">Old School</a> icons from babaasse</li>
+      <li><a href="http://ztreasureisle.wikia.com/wiki/File:JudgeItems_Gavel-icon.png">Judge</a> icon from <a href="http://ztreasureisle.wikia.com/wiki/User:Henriquegr">Henriquegr</a></li>
+      <li><a href="http://pixelpressicons.com/index_old.html">Ship</a> icon from <a href="http://www.pixelpressicons.com/">PixelPressIcons</a></li>
+      <li>Small icons from <a href="http://www.customicondesign.com/">Custom Icon Design</a>, <a href="http://p.yusukekamiyamane.com/">p.yusukekamiyamane</a>, <a href="http://led24.de/iconset/">led24</a> and
+      <a href="http://www.iconshock.com/">Icon Stock</a></li>
+    </ul>
   </div>
 
   <div class="widget about-container">
