--- a/public/stylesheets/theme/style.css
+++ b/public/stylesheets/theme/style.css
@@ -149,7 +149,7 @@ padding: 2px 0 2px 23px;
 }
 
 .widget_text {
-background: url(images/text-hatch.png) top left repeat;
+background: url(images/texthatch.png) top left repeat;
 width: 930px;
 float: left;
 padding: 15px;
@@ -214,7 +214,7 @@ box-shadow: 0px 0px 2px #000000;
 **********************************************************************************************/
 
 h2.page-title {
-background: url(images/text-hatch.png) top left repeat;
+background: url(images/texthatch.png) top left repeat;
 font-family: 'Neuton', arial, serif;
 font-size: 25px;
 width: 930px;
