fix ie9 message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 <script>
 (function($){
    $(function(){
-          var message = "This site requires a modern browser such as <a href="http://www.google.com/chrome/">Chrome</a>, <a href='http://firefox.com'>Firefox</a> or Internet Explorer 9.",
+          var message = "This site requires a modern browser such as <a href='http://www.google.com/chrome/'>Chrome</a>, <a href='http://firefox.com'>Firefox</a> or Internet Explorer 9.",
           div = $('<div id="ie-warning"></div>').html(message).css({
                    'height': '50px',
                    'line-height': '50px',
