--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -109,7 +109,7 @@
   </div> <!-- #footer .row -->
 
   <script>
-    YAHOO.widget.Logger.enableBrowserConsole();
+    //YAHOO.widget.Logger.enableBrowserConsole();
   </script>
 </body>
 </html>
