add warning message if < ie8

--- a/app/views/data/_top_boats_chart.html.erb
+++ b/app/views/data/_top_boats_chart.html.erb
@@ -1,6 +1,11 @@
 <div id="boats-bubble-graph-container" class="widget">
   <h3 class="widget-section-title widget-title-graph-icon">Top 100 Boats</h3>
   <div id="boats-bubble-graph"> </div>
+  <!--[if lte IE 8]>
+  <div style="background-color: #f9db17;height:380px;width:420px;text-align:center;font-weight:bold;padding-top:20px">
+    This visualisation requires a modern browser. Try <a href='http://www.google.com/chrome/'>Chrome</a>, <a href='http://firefox.com'>Firefox</a> or Internet Explorer 9.
+  </div>
+  <![endif]-->
 
   <script type="text/javascript+protovis">
 $(document).ready(function() {
