try to fix date on ie

--- a/app/views/convicts/index.html.erb
+++ b/app/views/convicts/index.html.erb
@@ -77,7 +77,7 @@ var customDateFormatter = function (elCell, oRecord, oColumn, oData) {
             sMonth = "Dec";
             break;
     }
-    elCell.innerHTML = oDate.getDate()  + " " + sMonth + " " + oDate.getFullYear();
+    elCell.innerHTML = oDate;//oDate.getDate()  + " " + sMonth + " " + oDate.getFullYear();
 };
 
 
