--- a/app/views/data/destinations.html.erb
+++ b/app/views/data/destinations.html.erb
@@ -78,7 +78,7 @@ $(document).ready(function() {
          height: 350,
          marginBottom: -30,
          marginTop: -30,
-         spacingTop: 0,
+         spacingTop: 0
       },
       title: {
          text: null
