--- a/app/views/data/departure_dates.html.erb
+++ b/app/views/data/departure_dates.html.erb
@@ -28,7 +28,7 @@
 
             var columnDefs = [
                 {key:"departure_year", label: "Departure Year", sortable:true, resizeable:true},
-                {key:"convicts", label: "Convicts", formatter: "number", sortable:true, resizeable:true},
+                {key:"convicts", label: "Convicts", formatter: "number", sortable:true, resizeable:true}
             ];
      
             var tableDS = new YAHOO.util.DataSource(tableData);
