--- a/app/views/data/destinations.html.erb
+++ b/app/views/data/destinations.html.erb
@@ -30,7 +30,7 @@
             var columnDefs = [
                 {key:"destination", label: "Destination", sortable:true, resizeable:true},
                 {key:"state", label: "State", sortable:true, resizeable:true},
-                {key:"convicts", label: "Convicts", formatter: "number", sortable:true, resizeable:true},
+                {key:"convicts", label: "Convicts", formatter: "number", sortable:true, resizeable:true}
             ];
      
             var tableDS = new YAHOO.util.DataSource(tableData);
