--- a/app/views/data/boats.html.erb
+++ b/app/views/data/boats.html.erb
@@ -100,7 +100,7 @@ $(document).ready(function() {
             var columnDefs = [
                 {key:"boat", label: "Boat", sortable:true, resizeable:true},
                 {key:"convicts", label: "Convicts", formatter: "number", sortable:true, resizeable:true},
-                {key:"voyage_count", label: "Voyages", formatter: "number", sortable:true, resizeable:true},
+                {key:"voyage_count", label: "Voyages", formatter: "number", sortable:true, resizeable:true}
             ];
      
             var tableDS = new YAHOO.util.DataSource(tableData);
