--- a/app/views/convicts/index.html.erb
+++ b/app/views/convicts/index.html.erb
@@ -17,6 +17,8 @@
       Convicts departing in <%= params[:departure_year] %>
     <% elsif params[:court_county] %>
       Convicts convicted near <%= params[:court_county] %>
+    <% elsif params[:term] %>
+      Convicts sentences to <%= humanize_term params[:term] %>      
     <% elsif params[:q].present? %>
       Searching Convicts for: <%= params[:q].titleize %>
     <% else %>
@@ -101,7 +103,7 @@ var customDateFormatter = function (elCell, oRecord, oColumn, oData) {
                 {key:"departure_date", label: "Departure Date", formatter:customDateFormatter, sortable:true, resizeable:true},
                 {key:"court", label: "Court", sortable:true, resizeable:true},
                 {key:"destination", label: "Destination", sortable:true, resizeable:true},
-                {key:"term", label: "Term", sortable:true, resizeable:true}
+                {key:"term", label: "Sentence", sortable:true, resizeable:true}
             ];
 
             //Hack for IE so date looks ok .... this makes me sad :(
