try to debug prod error

--- a/app/views/data/terms.html.erb
+++ b/app/views/data/terms.html.erb
@@ -108,6 +108,8 @@ $(document).ready(function() {
 });
 </script>
 
+<%= @term_ranges.inspect %>
+
 <div id="term-departure-date-graph-container" class="widget">
   <h3 class="widget-section-title widget-title-graph-icon">Sentence Vs Departure Decade</h3>
   <div id="term-departure-date-graph"> </div>
