add header link to terms and names

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,9 +34,11 @@
               <li class="first"><a href="/" title="Home">Home</a></li>
               <li><a href="/convicts" title="Convicts">Convicts</a></li>
               <li><a href="/data/boats" title="Boats">Boats</a></li>
-              <li><a href="/data/destinations" title="Destinations">Destinations</a></li>
+              <li><a href="/data/destinations" title="Destinations">Dest</a></li>
               <li><a href="/data/departure_dates" title="Departure Dates">Dates</a></li>
               <li><a href="/data/court_counties" title="Court Counties">Counties</a></li>
+              <li><a href="/data/terms" title="Sentences">Terms</a></li>
+              <li><a href="/data/names" title="Names">Names</a></li>
               
               <li class="page_item page-item-2"><a href="/home/about" title="About">About</a></li>
             </ul>
